--- a/tpl/introduction.html
+++ b/tpl/introduction.html
@@ -56,8 +56,37 @@
                 </div>
                 <div class="box2-wrapper1">
                   <div class="box2 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.1s">
-                    <div class="row">
-                    <div class="grid_6 mb20">
+                    <div class="row introductionCont">
+                    <script>
+                    $(function(){
+                        $.ajax({
+                            url:"<{spUrl c=main a=listData}>",
+                            type:"post",
+                            data:{columnId:"introduction",limit:"10"},
+                            success:function(data){
+                                var dataObj = eval('(' + data + ')');
+                                for(i=0;i<dataObj.length;i++){
+                                str = '<div class="grid_6">\
+                                            <div class="grid_2">\
+                                                <div class="img-wrapper1">\
+                                                    <img src="'+dataObj[i]['thumbnails']+'" alt=""/>\
+                                                </div>\
+                                            </div>\
+                                            <div class="grid_4 w100">\
+                                                <p class="fn18">'+dataObj[i]['article_title']+'</p>\
+                                                <p>'+dataObj[i]['article_title2']+'</p>\
+                                                <p class="mt20"><a class="btmore rt" href="'+dataObj[i]['url']+'">詳情</a> <a class="bt5" href="#">50</a><a class="btno" href="#">50</a> </p>\
+                                            </div>\
+                                        </div>';
+                                $(".introductionCont").append(str);
+                                }
+                                //console.log(dataObj);
+                            }
+                        })
+                        
+                    })
+                    </script>
+                    <!-- <div class="grid_6 mb20">
                       <div class="grid_2">
                         <div class="img-wrapper1">
                           <img src="images/tv.jpg" alt=""/>
@@ -68,139 +97,7 @@
                       <p>聯盟20多個酒莊成員均來自意大利盛產頂級紅酒的地區帶來300+以上的 紅酒/白酒/氣泡酒...</p>
                       <p class="mt20"><a class="btmore rt" href="#">詳情</a> <a class="bt5" href="#">50</a><a class="btno" href="#">50</a> </p>
                       </div>
-                    </div> 
-                    <div class="grid_6 mb20">
-                      <div class="grid_2">
-                        <div class="img-wrapper1">
-                          <img src="images/tv.jpg" alt=""/>
-                        </div>
-                      </div>
-                      <div class="grid_4 w100">                  
-                        <p class="fn18">伊比利亞火腿 (Iberian ham) </p>
-                      <p>聯盟20多個酒莊成員均來自意大利盛產頂級紅酒的地區帶來300+以上的 紅酒/白酒/氣泡酒...</p>
-                      <p class="mt20"><a class="btmore rt" href="#">詳情</a> <a class="bt5" href="#">50</a><a class="btno" href="#">50</a> </p>
-                      </div>
-                    </div> 
-                    <div class="grid_6 mb20">
-                      <div class="grid_2">
-                        <div class="img-wrapper1">
-                          <img src="images/tv.jpg" alt=""/>
-                        </div>
-                      </div>
-                      <div class="grid_4 w100">                  
-                        <p class="fn18">伊比利亞火腿 (Iberian ham) </p>
-                      <p>聯盟20多個酒莊成員均來自意大利盛產頂級紅酒的地區帶來300+以上的 紅酒/白酒/氣泡酒...</p>
-                      <p class="mt20"><a class="btmore rt" href="#">詳情</a> <a class="bt5" href="#">50</a><a class="btno" href="#">50</a> </p>
-                      </div>
-                    </div>
-                    <div class="grid_6 mb20">
-                      <div class="grid_2">
-                        <div class="img-wrapper1">
-                          <img src="images/tv.jpg" alt=""/>
-                        </div>
-                      </div>
-                      <div class="grid_4 w100">                  
-                        <p class="fn18">伊比利亞火腿 (Iberian ham) </p>
-                      <p>聯盟20多個酒莊成員均來自意大利盛產頂級紅酒的地區帶來300+以上的 紅酒/白酒/氣泡酒...</p>
-                      <p class="mt20"><a class="btmore rt" href="#">詳情</a> <a class="bt5" href="#">50</a><a class="btno" href="#">50</a> </p>
-                      </div>
-                    </div>
-                    <div class="grid_6 mb20">
-                      <div class="grid_2">
-                        <div class="img-wrapper1">
-                          <img src="images/tv.jpg" alt=""/>
-                        </div>
-                      </div>
-                      <div class="grid_4 w100">                  
-                        <p class="fn18">伊比利亞火腿 (Iberian ham) </p>
-                      <p>聯盟20多個酒莊成員均來自意大利盛產頂級紅酒的地區帶來300+以上的 紅酒/白酒/氣泡酒...</p>
-                      <p class="mt20"><a class="btmore rt" href="#">詳情</a> <a class="bt5" href="#">50</a><a class="btno" href="#">50</a> </p>
-                      </div>
-                    </div> 
-                    <div class="grid_6 mb20">
-                      <div class="grid_2">
-                        <div class="img-wrapper1">
-                          <img src="images/tv.jpg" alt=""/>
-                        </div>
-                      </div>
-                      <div class="grid_4 w100">                  
-                        <p class="fn18">伊比利亞火腿 (Iberian ham) </p>
-                      <p>聯盟20多個酒莊成員均來自意大利盛產頂級紅酒的地區帶來300+以上的 紅酒/白酒/氣泡酒...</p>
-                      <p class="mt20"><a class="btmore rt" href="#">詳情</a> <a class="bt5" href="#">50</a><a class="btno" href="#">50</a> </p>
-                      </div>
-                    </div> 
-                    <div class="grid_6 mb20">
-                      <div class="grid_2">
-                        <div class="img-wrapper1">
-                          <img src="images/tv.jpg" alt=""/>
-                        </div>
-                      </div>
-                      <div class="grid_4 w100">                  
-                        <p class="fn18">伊比利亞火腿 (Iberian ham) </p>
-                      <p>聯盟20多個酒莊成員均來自意大利盛產頂級紅酒的地區帶來300+以上的 紅酒/白酒/氣泡酒...</p>
-                      <p class="mt20"><a class="btmore rt" href="#">詳情</a> <a class="bt5" href="#">50</a><a class="btno" href="#">50</a> </p>
-                      </div>
-                    </div>
-                    <div class="grid_6 mb20">
-                      <div class="grid_2">
-                        <div class="img-wrapper1">
-                          <img src="images/tv.jpg" alt=""/>
-                        </div>
-                      </div>
-                      <div class="grid_4 w100">                  
-                        <p class="fn18">伊比利亞火腿 (Iberian ham) </p>
-                      <p>聯盟20多個酒莊成員均來自意大利盛產頂級紅酒的地區帶來300+以上的 紅酒/白酒/氣泡酒...</p>
-                      <p class="mt20"><a class="btmore rt" href="#">詳情</a> <a class="bt5" href="#">50</a><a class="btno" href="#">50</a> </p>
-                      </div>
-                    </div>
-                    <div class="grid_6 mb20">
-                      <div class="grid_2">
-                        <div class="img-wrapper1">
-                          <img src="images/tv.jpg" alt=""/>
-                        </div>
-                      </div>
-                      <div class="grid_4 w100">                  
-                        <p class="fn18">伊比利亞火腿 (Iberian ham) </p>
-                      <p>聯盟20多個酒莊成員均來自意大利盛產頂級紅酒的地區帶來300+以上的 紅酒/白酒/氣泡酒...</p>
-                      <p class="mt20"><a class="btmore rt" href="#">詳情</a> <a class="bt5" href="#">50</a><a class="btno" href="#">50</a> </p>
-                      </div>
-                    </div> 
-                    <div class="grid_6 mb20">
-                      <div class="grid_2">
-                        <div class="img-wrapper1">
-                          <img src="images/tv.jpg" alt=""/>
-                        </div>
-                      </div>
-                      <div class="grid_4 w100">                  
-                        <p class="fn18">伊比利亞火腿 (Iberian ham) </p>
-                      <p>聯盟20多個酒莊成員均來自意大利盛產頂級紅酒的地區帶來300+以上的 紅酒/白酒/氣泡酒...</p>
-                      <p class="mt20"><a class="btmore rt" href="#">詳情</a> <a class="bt5" href="#">50</a><a class="btno" href="#">50</a> </p>
-                      </div>
-                    </div> 
-                    <div class="grid_6 mb20">
-                      <div class="grid_2">
-                        <div class="img-wrapper1">
-                          <img src="images/tv.jpg" alt=""/>
-                        </div>
-                      </div>
-                      <div class="grid_4 w100">                  
-                        <p class="fn18">伊比利亞火腿 (Iberian ham) </p>
-                      <p>聯盟20多個酒莊成員均來自意大利盛產頂級紅酒的地區帶來300+以上的 紅酒/白酒/氣泡酒...</p>
-                      <p class="mt20"><a class="btmore rt" href="#">詳情</a> <a class="bt5" href="#">50</a><a class="btno" href="#">50</a> </p>
-                      </div>
-                    </div>
-                    <div class="grid_6 mb20">
-                      <div class="grid_2">
-                        <div class="img-wrapper1">
-                          <img src="images/tv.jpg" alt=""/>
-                        </div>
-                      </div>
-                      <div class="grid_4 w100">                  
-                        <p class="fn18">伊比利亞火腿 (Iberian ham) </p>
-                      <p>聯盟20多個酒莊成員均來自意大利盛產頂級紅酒的地區帶來300+以上的 紅酒/白酒/氣泡酒...</p>
-                      <p class="mt20"><a class="btmore rt" href="#">詳情</a> <a class="bt5" href="#">50</a><a class="btno" href="#">50</a> </p>
-                      </div>
-                    </div>
+                    </div> -->
                    </div>                   
                   </div>
                 </div> 
