--- a/tpl/back/article-list.html
+++ b/tpl/back/article-list.html
@@ -38,7 +38,7 @@
 		<input type="text" name="" id="" placeholder=" 资讯名称" style="width:250px" class="input-text">
 		<button name="" id="" class="btn btn-success" type="submit"><i class="Hui-iconfont">&#xe665;</i> 搜资讯</button>
 	</div>
-	<div class="cl pd-5 bg-1 bk-gray mt-20"> <span class="l"><a href="javascript:;" onclick="datadel()" class="btn btn-danger radius"><i class="Hui-iconfont">&#xe6e2;</i> 批量删除</a> <a class="btn btn-primary radius" data-title="添加資訊" data-href="<{spUrl c=backfuns a=themeAdd id=<{$column}> title=<{$title}>}>" onclick="Hui_admin_tab(this)" href="javascript:;"><i class="Hui-iconfont">&#xe600;</i> 添加資訊</a></span>  </div>
+	<div class="cl pd-5 bg-1 bk-gray mt-20"> <span class="l"><a href="javascript:;" onclick="datadel()" class="btn btn-danger radius"><i class="Hui-iconfont">&#xe6e2;</i> 批量删除</a> <a class="btn btn-primary radius" data-title="添加資訊" data-href="<{spUrl c=backFuns a=themeAdd id=<{$column}> title=<{$title}>}>" onclick="Hui_admin_tab(this)" href="javascript:;"><i class="Hui-iconfont">&#xe600;</i> 添加資訊</a></span>  </div>
 	<div class="mt-20">
 		<table class="table table-border table-bordered table-bg table-hover table-sort table-responsive dataTable">
 			<thead>
@@ -125,7 +125,7 @@ function article_del(obj,id){
 		var column = '<{$column}>';
 		$.ajax({
 			type: 'POST',
-			url: '<{spUrl c=backfuns a=articleDelete}>',
+			url: '<{spUrl c=backFuns a=articleDelete}>',
 			data:{column:column,id:id},
 			success: function(data){
 				if(data == "done"){
@@ -160,7 +160,7 @@ function article_shenhe(obj,id){
 
 function displaySwitch(id,act){
 	$.ajax({
-		url:"<{spUrl c=backfuns a=displaySwitch}>",
+		url:"<{spUrl c=backFuns a=displaySwitch}>",
 		type:"post",
 		data:{id:id,act:act,column:"<{$column}>"},
 		success:function(data){
@@ -203,7 +203,7 @@ $(function(){
 	function dataHandle(){
 		var id = "<{$column}>";
 		$.ajax({
-			url:"<{spUrl c=backfuns a=articleDataHandle}>",
+			url:"<{spUrl c=backFuns a=articleDataHandle}>",
 			type:"post",
 			data:{id:id},
 			success:function(data){
@@ -246,7 +246,7 @@ $(function(){
 						<td>'+dataObj[i]['creator']+'</td>\
 						<td>'+allowcomments+'</td>\
 						<td class="td-status">'+display+'</td>\
-						<td class="f-14 td-manage">'+displaySwitch+' <a style="text-decoration:none" class="ml-5" data-title="編輯" data-href="<{spUrl c=backfuns a=articleDataEdit columnId=<{$column}> title=<{$title}>}>&articleId='+dataObj[i]['id']+'" onclick="Hui_admin_tab(this)" href="javascript:;"><i class="Hui-iconfont">&#xe6df;</i></a> <a style="text-decoration:none" class="ml-5" onClick="article_del(this,'+dataObj[i]['id']+')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>\
+						<td class="f-14 td-manage">'+displaySwitch+' <a style="text-decoration:none" class="ml-5" data-title="編輯" data-href="<{spUrl c=backFuns a=articleDataEdit columnId=<{$column}> title=<{$title}>}>&articleId='+dataObj[i]['id']+'" onclick="Hui_admin_tab(this)" href="javascript:;"><i class="Hui-iconfont">&#xe6df;</i></a> <a style="text-decoration:none" class="ml-5" onClick="article_del(this,'+dataObj[i]['id']+')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>\
 					</tr>'
 					$(".dataTable tbody").append(str);
 				}
