--- a/tpl/back/video-add.html
+++ b/tpl/back/video-add.html
@@ -36,7 +36,7 @@
 		<input class="theme" type="text" name="theme" value="<{$columnId}>">
 		<input class="articleId" type="text" name="articleId" value="<{$articleId}>">
 		<div class="row cl">
-			<label class="form-label col-xs-4 col-sm-2"><span class="c-red">*</span>文章標題：</label>
+			<label class="form-label col-xs-4 col-sm-2"><span class="c-red">*</span>視頻標題：</label>
 			<div class="formControls col-xs-8 col-sm-9">
 				<input type="text" class="input-text" value="" placeholder="" id="articletitle" name="articletitle">
 			</div>
@@ -48,7 +48,7 @@
 			</div>
 		</div>
 		<div class="row cl">
-			<label class="form-label col-xs-4 col-sm-2"><span class="c-red">*</span>文章類型：</label>
+			<label class="form-label col-xs-4 col-sm-2"><span class="c-red">*</span>視頻類型：</label>
 			<div class="formControls col-xs-8 col-sm-9"> <span class="select-box">
 				<select name="articletype" class="select">
 					<option value="0">產品資訊</option>
@@ -69,14 +69,14 @@
 			</div>
 		</div>
 		<div class="row cl">
-			<label class="form-label col-xs-4 col-sm-2">文章摘要：</label>
+			<label class="form-label col-xs-4 col-sm-2">視頻摘要：</label>
 			<div class="formControls col-xs-8 col-sm-9">
 				<textarea name="abstract" cols="" rows="" class="textarea"  placeholder="" datatype="*10-100" dragonfly="true" nullmsg="不能為空！" onKeyUp="$.Huitextarealength(this,200)"></textarea>
 				<p class="textarea-numberbar"><em class="textarea-length">0</em>/200</p>
 			</div>
 		</div>
 		<div class="row cl">
-			<label class="form-label col-xs-4 col-sm-2">文章作者：</label>
+			<label class="form-label col-xs-4 col-sm-2">視頻作者：</label>
 			<div class="formControls col-xs-8 col-sm-9">
 				<input type="text" class="input-text" value="" placeholder="" id="author" name="author">
 			</div>
@@ -102,7 +102,6 @@
 									 </section>
 							 </div>
 						 </section>
-						 <!-- <input name="" type="submit" class="btn btn-success radius size-L" value="上传"> -->
 				</div>
 				<aside class="mask works-mask">
 					<div class="mask-content">
@@ -113,7 +112,7 @@
 			</div>
 		</div>
 		<div class="row cl">
-			<label class="form-label col-xs-4 col-sm-2">文章內容：</label>
+			<label class="form-label col-xs-4 col-sm-2">視頻內容：</label>
 			<div class="formControls col-xs-8 col-sm-9"> 
 				<script id="editor" type="text/plain" style="width:100%;height:400px;"></script>
 				<textarea name="editorCont" id="editorCont"></textarea>
