--- a/tpl/forum.html
+++ b/tpl/forum.html
@@ -53,7 +53,7 @@
         <div class="row mg10">
          
             <div class="heading1">
-              <h2 class="pdl20 fn24 mt20 ">達人吹水園地<em class="btback">新增主題</em>
+              <h2 class="pdl20 fn24 mt20 ">達人吹水園地<a href="<{spUrl c=frontFuns a=addForumIndex}>"><em class="btback">新增主題</em></a>
               <em class="rt u1pr"><input name="" type="text" class="findtext" placeholder="主題, 酒名, 酒類, keyword"> <i class="go"><img src="images/go.png"></i></em>             
               </h2>
             </div>
