--- a/tpl/back/index.html
+++ b/tpl/back/index.html
@@ -76,6 +76,7 @@
 					<li><a data-href="<{spUrl c=backfuns a=articleList title='達人搞乜鬼' id='0'}>" data-title="達人搞乜鬼" href="javascript:void(0)">達人搞乜鬼</a></li>
 					<li><a data-href="<{spUrl c=backfuns a=articleList title='達人好介紹' id='1'}>" data-title="達人好介紹" href="javascript:void(0)">達人好介紹</a></li>
 					<li><a data-href="<{spUrl c=backfuns a=articleList title='達人講你知' id='2'}>" data-title="達人講你知" href="javascript:void(0)">達人講你知</a></li>
+					<li><a data-href="<{spUrl c=backfuns a=articleList title='影院' id='3'}>" data-title="影院" href="javascript:void(0)">影院</a></li>
 			</ul>
 		</dd>
 	</dl>
