--- a/tpl/articleDetail.html
+++ b/tpl/articleDetail.html
@@ -42,12 +42,12 @@
       <div class="container">
         <div class="row article">    
               <h2><{$article_title}><em class="fn15"><{$article_title2}></em></h2>
-              <span>創建時間：<{$create_time}></span><span class="mf20">/更新時間：<{$update_time}></span><span class="mf20">/作者：<{$author}></span><span class="favoriteBut mf20"><{$favorite}></span>
+              <span>創建時間：<{$create_time}></span><span class="mf20">/更新時間：<{$update_time}></span><span class="mf20">/作者：<{$author}></span>
               <div class="mt20 articleCont"><{$editorCont}></div>
         </div>
       </div>      
     </div>
-
+    <div class="likeOrDislike"><a class="likeBtn bt5" name="like"><{$likeNum}></a><a class="likeBtn btno" name="dislike"><{$dislikeNum}></a></div>
    <div class="say wow fadeInDown">
      <h2><span class="commentCount">0</span>则回应<em class="rt">排序方式：<select>
        <option>最新</option>
@@ -127,47 +127,65 @@
         var timestamp = Date.parse(new Date());
         timestamp = timestamp / 1000;
 
-        function favorite(){
+        function likeOrDislike(type){
             var column = getUrlParam("column");
             var id = getUrlParam("id");
             $.ajax({
-                url:"<{spUrl c=frontFuns a=favoriteSwitch}>",
+                url:"<{spUrl c=frontFuns a=likeOrDislike}>",
                 type:"post",
-                data:{column:column,id:id},
+                data:{column:column,id:id,type:type},
                 success:function(data){
-                  switch(data){
-                    case "false":
-                      alert("請先登錄");
-                    break;
-                    case "0":
-                      $(".favoriteBut").html("<img src='images/like.png'>I Like it!");
-                    break;
-                    case "1":
-                      $(".favoriteBut").html("<img src='images/unlike.png'>加入喜愛");
-                    break;
-                    case "10001":
-                      alert("操作頻繁，請休息一下再試");
-                    break;
-                  }
+                //   switch(data){
+                //     case "false":
+                //       alert("請先登錄");
+                //     break;
+                //     case "0":
+                //       $(".favoriteBut").html("<img src='images/like.png'>I Like it!");
+                //     break;
+                //     case "1":
+                //       $(".favoriteBut").html("<img src='images/unlike.png'>加入喜愛");
+                //     break;
+                //     case "10001":
+                //       alert("操作頻繁，請休息一下再試");
+                //     break;
+                //   }
+                console.log(data);
                 }
             })
         }
 
-        function reply(){
+        $(".likeBtn").click(function(){
+            var type = $(this).attr("name");
+            likeOrDislike(type);
+        })
+
+        function replyFun(){
             $(".reply").bind("click",function(){
-                var thisCommentUsername = $(this).parent().parent().find(".commentUsername").html();
-                var replyInputDiv = "<div class='replyInputDiv'><input type='text' class='btext replyInput'></input></div>";
-                var thisReplyInputDiv = $(this).parent().parent().append(replyInputDiv);
-                // $(".replyInput").blur(function(){
-                //     $(this).parent().remove();
-                // });
-                $(".replyInputDiv").not(thisReplyInputDiv).remove();
+                var thisGranddad = $(this).parent().parent();
+                if(thisGranddad.find(".replyInputDiv").html() == undefined){
+                    var thisCommentUsername = "<span class='replyUser'>"+thisGranddad.find(".commentUsername").html()+"</span>";
+                    var replyInputDiv = "<div class='replyInputDiv'><input type='text' class='btext replyInput'></input><div class='addCommentUsername'>@"+thisCommentUsername+":</div><a class='btmore rt replybtn'>確定</a></div>";
+                    var thisReplyInputDiv = thisGranddad.append(replyInputDiv);
+                    var thisCommentUsernameWidth = thisGranddad.find(".addCommentUsername").width();
+                    thisGranddad.find(".replyInput").css({"padding-left":thisCommentUsernameWidth + 15});
+                    thisGranddad.find(".replyInput").focus();
+                    $(".addCommentUsername").click(function(){
+                        $(".replyInput").focus();
+                    });
+                    $(".replyInputDiv").not(thisGranddad.find(".replyInputDiv")).remove();
+                    //$(".replyInputDiv").not(thisGranddad.find(".replybtn")).remove();
+                    $(".replybtn").bind("click",function(){
+                        var replyUser = $(".replyUser").html();
+                        var content = $.trim($(".replyInput").val());
+                        reply(content,replyUser);
+                    });
+                }
             });
         }
 
-        $(".favoriteBut").click(function(){
-            favorite();
-        })
+        function reply(content,replyUser){
+            comment(content,replyUser);
+        }
 
         function commentQuery(){
             var column = getUrlParam("column");
@@ -186,6 +204,7 @@
                     var avatar;
                     var thumbsUpNum = "0";
                     var createTime;
+                    var replyUser;
                     if(dataObj.length){
                         $(".commentCount").html(dataObj.length);
                     }
@@ -200,6 +219,11 @@
                         }else{
                             thumbsUpNum = "0";
                         }
+                        if(dataObj[i]['reply'] != null){
+                            replyUser = "<a class='replyUserDetail mgr0'>@"+dataObj[i]['reply']+"</a>: ";
+                        }else{
+                            replyUser = "";
+                        }
                         time = translateTime(dataObj[i]['create_time']);
                         str = '<li>\
                                     <table width="100%" border="0">\
@@ -207,7 +231,7 @@
                                             <td width="60" class="vertical_align_top" valign="top"><img class="commentAvatar" src="'+avatar+'"></td>\
                                             <td>\
                                             <p class="pd5 gray"><em class="fblue commentUsername">'+dataObj[i]['username']+'</em></p>\
-                                            <p>'+dataObj[i]['content']+'</p>\
+                                            <p class="commentContent">'+replyUser+dataObj[i]['content']+'</p>\
                                             <p class="gray"><a class="reply">回復</a><a class="thumbsUpBtn" value="'+dataObj[i]['id']+'"><img src="images/good.jpg"><span class="thumbsUpNum">'+thumbsUpNum+'</span></a>'+time+'</p>\
                                             </td>\
                                         </tr>\
@@ -216,11 +240,12 @@
                         $(".commentCont").append(str);
                     }
                     //console.log(data);
+
                     $(".thumbsUpBtn").click(function(){
                         var id = $(this).attr("value");
                         thumbsUp(id,$(this));
                     });
-                    reply();
+                    replyFun();
                 }
             })
         }
@@ -248,13 +273,13 @@
             return Y+M+D+h+m+s;
         }
 
-        function comment(content){
+        function comment(content,replyUser){
             var column = getUrlParam("column");
             var id = getUrlParam("id");
             $.ajax({
                 url:"<{spUrl c=frontFuns a=commentInsert}>",
                 type:"post",
-                data:{column:column,id:id,content:content},
+                data:{column:column,id:id,content:content,replyUser:replyUser},
                 success:function(data){
                     switch(data){
                         case "false":
