--- a/tpl/activicity.html
+++ b/tpl/activicity.html
@@ -71,7 +71,7 @@
                                         <div class="grid_4 w100">\
                                             <p class="fn18">'+dataObj[i]['article_title']+'</p>\
                                             <p>'+dataObj[i]['article_title2']+'</p>\
-                                            <p class="mt20"><a class="btmore rt" href="'+dataObj[i]['url']+'">詳情</a> <a class="bt5" href="#">50</a><a class="btno" href="#">50</a> </p>\
+                                            <p class="mt20"><a class="btmore rt" href="'+dataObj[i]['url']+'">詳情</a> <a class="bt5" href="#">'+dataObj[i]['like_num']+'</a><a class="btno" href="#">'+dataObj[i]['dislike_num']+'</a> </p>\
                                         </div>\
                                     </div>';
                             $(".activicityCont").append(str);
